running type inference on corpus

--- a/test.ipynb
+++ b/test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(test)"
+    "data = pd.read_csv(\"../data/prices.csv\")"
    ]
   },
   {
@@ -26,7 +26,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(test);"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston = pd.read_csv('marathon/Boston_Marathon_2015_to_2017.csv')\n",
+    "boston.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 5\n",
+    "a"
    ]
   }
  ],
