incorporating type inference into tool

--- a/test.ipynb
+++ b/test.ipynb
@@ -26,7 +26,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
+    "samples_w_total = samples.copy()\n",
+    "samples_w_total['Total'] = samples_w_total.sum(axis=1)\n",
+    "samples_percentage = samples.loc[:,\"Fresh\":\"Delicatessen\"].div(samples_w_total['Total'], axis=0) * 100\n",
+    "samples_percentage['Total'] = samples_percentage.sum(axis=1)\n",
+    "samples_percentage"
    ]
   },
   {
@@ -35,27 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston = pd.read_csv('marathon/Boston_Marathon_2015_to_2017.csv')\n",
-    "boston.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boston"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 5\n",
-    "a"
+    "data.iloc[0:5]"
    ]
   }
  ],
