--- a/test.ipynb
+++ b/test.ipynb
@@ -27,20 +27,12 @@
    "outputs": [],
    "source": [
     "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
+    "# Calculate the percentage of each category\n",
     "samples_w_total = samples.copy()\n",
     "samples_w_total['Total'] = samples_w_total.sum(axis=1)\n",
     "samples_percentage = samples.loc[:,\"Fresh\":\"Delicatessen\"].div(samples_w_total['Total'], axis=0) * 100\n",
     "samples_percentage['Total'] = samples_percentage.sum(axis=1)\n",
     "samples_percentage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.iloc[0:5]"
    ]
   }
  ],
