--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../data/prices.csv\")"
+    "read = pd.read_csv(\"../data/prices.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tom' 'nick']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [['tom', 10, 1], ['nick', 15, 3], ['juli', 14, 5]]\n",
+    " \n",
+    "df = pd.DataFrame(data, columns=['Name', 'Age', 'ID'])\n",
+    "\n",
+    "t0 = df['Name'].unique()[:2]\n",
+    "\n",
+    "print(t0)"
    ]
   },
   {
@@ -26,13 +49,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
-    "# Calculate the percentage of each category\n",
-    "samples_w_total = samples.copy()\n",
-    "samples_w_total['Total'] = samples_w_total.sum(axis=1)\n",
-    "samples_percentage = samples.loc[:,\"Fresh\":\"Delicatessen\"].div(samples_w_total['Total'], axis=0) * 100\n",
-    "samples_percentage['Total'] = samples_percentage.sum(axis=1)\n",
-    "samples_percentage"
+    "new_data = df.copy()\n",
+    "column_to_study = 'Grocery'\n",
+    "X_all = new_data.drop(column_to_study, axis=1)\n",
+    "y_all = data[column_to_study]\n",
+    "\n",
+    "# TODO: Split the data into training and testing sets using the given feature as the target\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=0.25, random_state=10)\n",
+    "\n",
+    "# TODO: Create a decision tree regressor and fit it to the training set\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "regressor = DecisionTreeRegressor(random_state=10)\n",
+    "regressor = regressor.fit(X_train, y_train)\n",
+    "\n",
+    "# TODO: Report the score of the prediction using the testing set\n",
+    "score = regressor.score(X_test, y_test)\n",
+    "print(score)"
    ]
   }
  ],
