--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,128 @@
     "\n",
     "# TODO: Report the score of the prediction using the testing set\n",
     "score = regressor.score(X_test, y_test)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tom</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nick</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>juli</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Name  Age  ID\n",
+       "0   tom   10   1\n",
+       "1  nick   15   3\n",
+       "2  juli   14   5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [['tom', 10, 1], ['nick', 15, 3], ['juli', 14, 5]]\n",
+    " \n",
+    "df = pd.DataFrame(data, columns=['Name', 'Age', 'ID'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9733333333333334\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/MP/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris  \n",
+    "from sklearn.linear_model import LogisticRegression  \n",
+    "from sklearn.metrics import accuracy_score  \n",
+    "  \n",
+    "# Loading and separating the independent and the dependent features of the dataset  \n",
+    "X, Y = load_iris(return_X_y = True)  \n",
+    "  \n",
+    "# Creating an instance of the Logistic Regression model class  \n",
+    "logreg = LogisticRegression(random_state = 0)  \n",
+    "  \n",
+    "# Fitting our load_iris dataset to the model  \n",
+    "logreg.fit(X, Y)  \n",
+    "  \n",
+    "# Predicting the values using the predict method in the model class  \n",
+    "Y_pred = logreg.predict(X)  \n",
+    "  \n",
+    "# Calculating the accuracy score of the model based on the predicted values and the true values of the dependent feature  \n",
+    "score = accuracy_score(Y, Y_pred)  \n",
     "print(score)"
    ]
   }
