revised w/ Dylan feedback

--- a/test.ipynb
+++ b/test.ipynb
@@ -34,7 +34,9 @@
     }
    ],
    "source": [
-    "data = [['tom', 10, 1], ['nick', 15, 3], ['juli', 14, 5]]\n",
+    "data = [['tom', 10, 1], \n",
+    "        ['nick', 15, 3], \n",
+    "        ['juli', 14, 5]]\n",
     " \n",
     "df = pd.DataFrame(data, columns=['Name', 'Age', 'ID'])\n",
     "\n",
@@ -553,6 +555,10 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "X1, Y1 = load_iris(return_X_y = True, as_frame=True) \n",
+    "\n",
+    "if True:\n",
+    "    print(\"test\")\n",
+    "\n",
     "X1\n",
     "# pca = PCA(n_components=2).fit(X1)\n",
     "# pca_2d = pca.transform(X1)"
